src/test/testFiles/invalid/semanticErrors/undeclaredVariableUse.manimdsl
let y: number = 10;
y = x + 2;